--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,56 @@
        
     <h2>Blog</h2>
 
+
+    <!-- ninth Blog -->
+<details class="blog-box">
+  <summary>Lessons from Pavel Durov on Freedom, Discipline, and Purpose</summary>
+  <div class="blog-content">
+    <h4>Introduction</h4>
+
+    <p>These insights are drawn from Pavel Durov’s conversation with Lex Fridman. Pavel, the founder of Telegram, has lived his life fighting for freedom of speech and building tools that protect human communication from surveillance and censorship. For this, he has faced pressure from some of the most powerful governments and organizations on earth. He is one of the most principled and fearless humans.</p>
+
+    <p><em>“Свобода дороже денег” which means “Freedom matters more than money.”</em></p>
+
+    <h4>Freedom, Fear, and Living by Principles</h4>
+
+    <p>The biggest enemies of freedom are fear and greed, so he makes sure they never stand in his way. If you imagine the worst thing that can happen and make yourself comfortable with it, then there is nothing left to be afraid of. This allows you to stand your ground and live according to the principles you believe in, even if this life ends up being shorter than a longer life lived in slavery.</p>
+
+    <p>Nobody wants to die, but he approaches it rationally. You live and then you die. There is no such thing as “your death” in your life, because once you die you stop experiencing life. So you have to ask yourself: is it worth living a life full of fear of death, or is it more enjoyable to forget about this fear and live in a way that makes you immune to it? At the same time, you must remember that death exists, so that every day counts.</p>
+
+    <p>His health and success, he says, are the result of more than 20 years of complete abstinence from alcohol, tobacco, coffee, pills, and illegal drugs. <em>“Short-term pleasure isn’t worth your future.”</em></p>
+
+    <h4>Discipline, Focus, and Protecting the Mind</h4>
+
+    <p>He believes in being contrarian, setting your own rules. If you are afraid to approach someone, go and practice until the fear disappears. He has always been ready to say no when something doesn’t feel right.</p>
+
+    <p>He also does not see the phone as a necessary device. His phone was always on airplane mode or mute because he hated the idea of being disturbed. His philosophy is simple: define what is important in your life yourself. Do not let other people, companies, or organizations decide what you should be thinking about today. If you open your phone first thing in the morning, you become a creature told what to think for the rest of the day.</p>
+
+    <p>Instead, he allocates as much time as possible for sleep. Even if he does not actually sleep 11 or 12 hours, he values the time lying in bed thinking. He never takes pills. These quiet moments, either late at night or early in the morning, are when many brilliant ideas come to him. Some of his favorite moments are waking up, taking a shower, and exercising without touching a phone. These routines protect his independence of mind.</p>
+
+    <h4>Action, Energy, and Physical Discipline</h4>
+
+    <p>He believes that energy comes from action, not rest. If you are stuck worrying, nothing changes. Start doing something, and momentum will appear. That is when you feel motivated and inspired, then you do a little more, then more, and eventually you may achieve great things.</p>
+
+    <p>He compares this to going to the gym. Many days you don’t want to start, but once you push past the initial reluctance you enjoy it and realize it was a good decision. The same is true for writing code, drafting a novel, or any creative work — begin with something small, and inspiration follows.</p>
+
+    <p>He lives this philosophy physically. He does 300 push-ups and 300 squats every morning. He also goes to the gym five or six times a week, spending one to two hours a day. His diet avoids processed sugar, fast food, and soda. He practices intermittent fasting — sometimes eating once a day, sometimes twice. He avoids all pills and pharmaceutical products.</p>
+
+    <p>He also filters the information he consumes. When he reads the news, he asks: “Who benefits from me reading this?” In most cases, the answer is that someone wants you to buy a product, support a cause, or fight a war. He warns that many people are manipulated into fighting battles that are not their own. He adds that he does not watch porn because it is a surrogate, a substitute for the real thing. It only drains energy and inspiration for a fleeting moment of pleasure.</p>
+
+    <h4>Work, Competition, and Scarcity</h4>
+
+    <p>He applies these ideas to business. From the early days he realized that the quantity of employees does not equal the quality of the product. In fact, too many people often make things worse. Most of the time is wasted on coordination, and employees who have nothing to do can demotivate everyone else. A small, disciplined team is far more effective.</p>
+
+    <p>His own education in St. Petersburg reflected this philosophy. In his experimental class, students studied four or more languages along with math, biochemistry, psychology, and other subjects. The workload was overwhelming, but it trained the mind to handle complexity. He especially values math because it shapes logical thinking — breaking down problems, sequencing them, solving step by step, and trying again when things fail. These skills are the same ones needed in programming, business, and project management.</p>
+
+    <p>He also believes competition drives progress. For hiring, contests and coding challenges reveal the best talent far better than traditional methods. If there isn’t enough data, repeat the contest with a new task and gather more results. Competition ensures fairness and excellence.</p>
+
+    <p>Finally, he warns against overabundance. Humanity evolved under scarcity, and today’s endless supply of food, entertainment, and inherited wealth can destroy purpose. If young people take pride not in their own achievements but in their parents’ status, they lose the drive to develop skills and work hard. Restrictions and discipline, he argues, are essential for meaning.</p>
+  </div>
+</details>
+
+
 <!-- Eight Blog -->
 <details class="blog-box">
   <summary>Best thing I read in this week</summary>
