--- a/blog.html
+++ b/blog.html
@@ -39,45 +39,45 @@
   <div class="blog-content">
     <h4>Introduction</h4>
 
-    <p>These insights are drawn from Pavel Durov’s conversation with Lex Fridman. Pavel, the founder of Telegram, has lived his life fighting for freedom of speech and building tools that protect human communication from surveillance and censorship. For this, he has faced pressure from some of the most powerful governments and organizations on earth. He is one of the most principled and fearless humans.</p>
+    <p>These insights come from Pavel Durov’s conversation with Lex Fridman. Known as the founder of Telegram, Pavel has spent his life building tools that protect human communication from surveillance and censorship. For this, he has faced immense pressure from some of the most powerful governments in the world. Yet he remains one of the most principled and fearless people of our time.</p>
 
-    <p><em>“Свобода дороже денег” which means “Freedom matters more than money.”</em></p>
+    <p><em>“Свобода дороже денег” — “Freedom matters more than money.”</em></p>
 
     <h4>Freedom, Fear, and Living by Principles</h4>
 
-    <p>The biggest enemies of freedom are fear and greed, so he makes sure they never stand in his way. If you imagine the worst thing that can happen and make yourself comfortable with it, then there is nothing left to be afraid of. This allows you to stand your ground and live according to the principles you believe in, even if this life ends up being shorter than a longer life lived in slavery.</p>
+    <p>Pavel often says the biggest enemies of freedom are fear and greed. His way of overcoming them is simple: imagine the worst thing that can happen, accept it fully, and suddenly there is nothing left to fear. That mindset allows him to stand by his principles, even if it means living a shorter life compared to a longer one spent in slavery.</p>
 
-    <p>Nobody wants to die, but he approaches it rationally. You live and then you die. There is no such thing as “your death” in your life, because once you die you stop experiencing life. So you have to ask yourself: is it worth living a life full of fear of death, or is it more enjoyable to forget about this fear and live in a way that makes you immune to it? At the same time, you must remember that death exists, so that every day counts.</p>
+    <p>He treats death with calm rationality. Life begins, and then it ends. There is no such thing as “your death” during your life, because once you die, experience itself stops. So the real question becomes: is it better to live in constant fear of death, or to forget that fear and live freely? At the same time, remembering death makes each day more meaningful.</p>
 
-    <p>His health and success, he says, are the result of more than 20 years of complete abstinence from alcohol, tobacco, coffee, pills, and illegal drugs. <em>“Short-term pleasure isn’t worth your future.”</em></p>
+    <p>His health and focus, he says, come from more than two decades of abstaining from alcohol, tobacco, coffee, pills, and drugs. <em>“Short-term pleasure isn’t worth your future.”</em></p>
 
     <h4>Discipline, Focus, and Protecting the Mind</h4>
 
-    <p>He believes in being contrarian, setting your own rules. If you are afraid to approach someone, go and practice until the fear disappears. He has always been ready to say no when something doesn’t feel right.</p>
+    <p>Pavel believes in being contrarian, in setting your own rules. If you fear approaching someone, go and do it until the fear disappears. He has always trusted his instincts to say no when something feels wrong.</p>
 
-    <p>He also does not see the phone as a necessary device. His phone was always on airplane mode or mute because he hated the idea of being disturbed. His philosophy is simple: define what is important in your life yourself. Do not let other people, companies, or organizations decide what you should be thinking about today. If you open your phone first thing in the morning, you become a creature told what to think for the rest of the day.</p>
+    <p>Technology is another area where he applies discipline. For him, the phone was never essential. It stayed on airplane mode or mute, because he hated the idea of being disturbed. The principle was clear: define what is important in your own life. Do not let apps, algorithms, or organizations decide what deserves your attention. Opening the phone first thing in the morning, he says, turns you into a creature told what to think for the rest of the day.</p>
 
-    <p>Instead, he allocates as much time as possible for sleep. Even if he does not actually sleep 11 or 12 hours, he values the time lying in bed thinking. He never takes pills. These quiet moments, either late at night or early in the morning, are when many brilliant ideas come to him. Some of his favorite moments are waking up, taking a shower, and exercising without touching a phone. These routines protect his independence of mind.</p>
+    <p>Instead, he chooses sleep and reflection. Even when he sets aside 11 or 12 hours, much of the time is not for sleeping but for lying in bed thinking. He never takes sleeping pills. In those quiet hours — late at night or early in the morning — ideas arrive, sometimes brilliant ones. Waking up, showering, and exercising without touching a phone became some of his favorite moments. These routines keep his mind independent and free.</p>
 
     <h4>Action, Energy, and Physical Discipline</h4>
 
-    <p>He believes that energy comes from action, not rest. If you are stuck worrying, nothing changes. Start doing something, and momentum will appear. That is when you feel motivated and inspired, then you do a little more, then more, and eventually you may achieve great things.</p>
+    <p>Pavel believes energy is born from action, not rest. Worrying changes nothing, but starting something — no matter how small — creates momentum. That first step generates motivation, which grows into inspiration, and eventually into real achievement.</p>
 
-    <p>He compares this to going to the gym. Many days you don’t want to start, but once you push past the initial reluctance you enjoy it and realize it was a good decision. The same is true for writing code, drafting a novel, or any creative work — begin with something small, and inspiration follows.</p>
+    <p>He compares it to going to the gym. On many days, the hardest part is simply starting. But once you push through the reluctance, the workout feels rewarding. The same applies to writing code, drafting a novel, or any creative project: begin with something small, and the ideas will follow.</p>
 
-    <p>He lives this philosophy physically. He does 300 push-ups and 300 squats every morning. He also goes to the gym five or six times a week, spending one to two hours a day. His diet avoids processed sugar, fast food, and soda. He practices intermittent fasting — sometimes eating once a day, sometimes twice. He avoids all pills and pharmaceutical products.</p>
+    <p>His own life is proof of this philosophy. Every morning he does 300 push-ups and 300 squats. On top of that, he trains at the gym five or six times a week, spending up to two hours per session. His diet avoids processed sugar, soda, and fast food. Intermittent fasting is part of his routine, sometimes eating only once a day. Pharmaceutical products and pills are avoided entirely.</p>
 
-    <p>He also filters the information he consumes. When he reads the news, he asks: “Who benefits from me reading this?” In most cases, the answer is that someone wants you to buy a product, support a cause, or fight a war. He warns that many people are manipulated into fighting battles that are not their own. He adds that he does not watch porn because it is a surrogate, a substitute for the real thing. It only drains energy and inspiration for a fleeting moment of pleasure.</p>
+    <p>He also applies discipline to information. Before consuming news, he asks himself: “Who benefits from me reading this?” Most often, the answer is that someone wants to sell a product, push a cause, or drag others into a conflict. He warns against being manipulated into fighting battles that are not your own. The same logic explains why he avoids pornography — calling it a substitute for the real thing that only drains energy and inspiration for a fleeting moment.</p>
 
     <h4>Work, Competition, and Scarcity</h4>
 
-    <p>He applies these ideas to business. From the early days he realized that the quantity of employees does not equal the quality of the product. In fact, too many people often make things worse. Most of the time is wasted on coordination, and employees who have nothing to do can demotivate everyone else. A small, disciplined team is far more effective.</p>
+    <p>This philosophy extends into business. From the beginning, Pavel realized that more employees do not mean better results. In fact, large teams often move slower, wasting energy on endless coordination. Worse, people with no real work can spread negativity and disrupt the focus of others. A small, disciplined team achieves far more.</p>
 
-    <p>His own education in St. Petersburg reflected this philosophy. In his experimental class, students studied four or more languages along with math, biochemistry, psychology, and other subjects. The workload was overwhelming, but it trained the mind to handle complexity. He especially values math because it shapes logical thinking — breaking down problems, sequencing them, solving step by step, and trying again when things fail. These skills are the same ones needed in programming, business, and project management.</p>
+    <p>His education in St. Petersburg shaped this mindset. In an experimental class, students had to study multiple languages, math, psychology, and sciences all at once. The workload was overwhelming, but it built resilience and trained the mind to handle complexity. Pavel sees mathematics in particular as essential — a subject that teaches how to break down problems, solve them step by step, and try again when things fail. Those same skills apply directly to programming, business, and leadership.</p>
 
-    <p>He also believes competition drives progress. For hiring, contests and coding challenges reveal the best talent far better than traditional methods. If there isn’t enough data, repeat the contest with a new task and gather more results. Competition ensures fairness and excellence.</p>
+    <p>Competition, he believes, is one of the best ways to drive progress. At Telegram, coding contests are often used to identify talent. Skills are demonstrated directly, not just listed on a résumé. If the results are unclear, another contest can be held, and more data collected. In this way, the best people naturally rise to the top.</p>
 
-    <p>Finally, he warns against overabundance. Humanity evolved under scarcity, and today’s endless supply of food, entertainment, and inherited wealth can destroy purpose. If young people take pride not in their own achievements but in their parents’ status, they lose the drive to develop skills and work hard. Restrictions and discipline, he argues, are essential for meaning.</p>
+    <p>Finally, Pavel warns against the dangers of abundance. Humanity evolved to survive scarcity, and unlimited access to food, entertainment, and inherited wealth often destroys motivation. When young people grow proud of their parents’ success rather than their own, they lose the drive to build skills and contribute. Restrictions and discipline, he argues, are what give life meaning.</p>
   </div>
 </details>
 
