--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,54 @@
   <main>
        
     <h2>Blog</h2>
+<!-- Tenth Blog -->
+<details class="blog-box">
+  <summary>Best things I read this week</summary>
+  <div class="blog-content">
+
+    <h4>Boredom as a Filter</h4>
+    <p>Boredom is a filter. Common ideas come before it. Uncommon ideas come after it. Sit with a project long enough to get bored with it, then sit a little more. The most useful insights bubble up after you get bored.</p>
+
+    <h4>Learning by Teaching</h4>
+    <p>The person who learns the most in any classroom is the teacher.</p>
+    <p>If you really want to learn a topic, then "teach" it. Write a book. Teach a class. Build a product. Start a company.</p>
+    <p>The act of making something will force you to learn more deeply than reading ever will.</p>
+
+    <h4>Use the Best Idea Now</h4>
+    <p>Use the best idea you have right now. Claiming you need to 'learn more' or 'get your ducks in a row' is just a crutch that prevents you from starting. Education is a lifelong pursuit. You will always need to learn more. It's not a reason to wait.</p>
+
+    <h4>Courage in Decisions</h4>
+    <p>"In my experience as CEO, I found that the most important decisions tested my courage far more than my intelligence." – Ben Horowitz</p>
+
+    <h4>Sam Altman on Success</h4>
+    <p><strong>1. Compound yourself</strong><br>
+    Compounding is magic. Look for it everywhere. Exponential curves are the key to wealth generation. Your rate of learning should always be high.</p>
+
+    <p><strong>2. Have almost too much self-belief</strong><br>
+    Self-belief is immensely powerful. The most successful people I know believe in themselves almost to the point of delusion. Cultivate this early. As you get more data points that your judgment is good and you can consistently deliver results, trust yourself more.</p>
+
+    <p><strong>3. Focus</strong><br>
+    Focus is a force multiplier on work. Almost everyone I've ever met would be well-served by spending more time thinking about what to focus on. It is much more important to work on the right thing than it is to work many hours. Most people waste most of their time on stuff that doesn't matter. Once you have figured out what to do, be unstoppable about getting your small handful of priorities accomplished quickly. I have yet to meet a slow-moving person who is very successful.</p>
+
+    <p><strong>4. Work hard</strong><br>
+    You can get to about the 90th percentile in your field by working either smart or hard, which is still a great accomplishment. But getting to the 99th percentile requires both — you will be competing with other very talented people who will have great ideas and be willing to work a lot.</p>
+
+    <p><strong>5. Be hard to compete with</strong><br>
+    Most people understand that companies are more valuable if they are difficult to compete with. This is important, and obviously true. But this holds true for you as an individual as well. If what you do can be done by someone else, it eventually will be, and for less money.</p>
+
+    <h4>Paul Graham on Hard Problems</h4>
+    <p>Paul Graham makes the counterintuitive recommendation that startups choose to solve hard problems:</p>
+
+    <p><em>“Use difficulty as a guide not just in selecting the overall aim of your company, but also at decision points along the way.</em></p>
+
+    <p><em>What this meant in practice was that we deliberately sought hard problems. If there were two features we could add to our software, both equally valuable in proportion to their difficulty, we'd always take the harder one. Not just because it was more valuable, but because it was harder. We delighted in forcing bigger, slower competitors to follow us over difficult ground. I can remember times when we were just exhausted after wrestling all day with some horrible technical problem. And I'd be delighted, because something that was hard for us would be impossible for our competitors.</em></p>
+
+    <p><em>This is not just a good way to run a startup. It's what a startup is. Venture capitalists know about this and have a phrase for it: barriers to entry. If you go to a VC with a new idea and ask him to invest in it, one of the first things he'll ask is, how hard would this be for someone else to develop? That is, how much difficult ground have you put between yourself and potential pursuers? And you had better have a convincing explanation of why your technology would be hard to duplicate.</em></p>
+
+    <p><em>Otherwise as soon as some big company becomes aware of it, they'll make their own, and with their brand name, capital, and distribution clout, they'll take away your market overnight.“</em></p>
+
+  </div>
+</details>
 
 
     <!-- ninth Blog -->
