--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
     <h2>Blog</h2>
 <!-- Tenth Blog -->
 <details class="blog-box">
-  <summary>Best things I read this week</summary>
+  <summary>Best things I read this week - 2</summary>
   <div class="blog-content">
 
     <h4>Boredom as a Filter</h4>
