--- a/blog.html
+++ b/blog.html
@@ -40,9 +40,7 @@
     <p>Boredom is a filter. Common ideas come before it. Uncommon ideas come after it. Sit with a project long enough to get bored with it, then sit a little more. The most useful insights bubble up after you get bored.</p>
 
     <h4>Learning by Teaching</h4>
-    <p>The person who learns the most in any classroom is the teacher.</p>
-    <p>If you really want to learn a topic, then "teach" it. Write a book. Teach a class. Build a product. Start a company.</p>
-    <p>The act of making something will force you to learn more deeply than reading ever will.</p>
+    <p>The person who learns the most in any classroom is the teacher.If you really want to learn a topic, then "teach" it. Write a book. Teach a class. Build a product. Start a company.The act of making something will force you to learn more deeply than reading ever will.</p>
 
     <h4>Use the Best Idea Now</h4>
     <p>Use the best idea you have right now. Claiming you need to 'learn more' or 'get your ducks in a row' is just a crutch that prevents you from starting. Education is a lifelong pursuit. You will always need to learn more. It's not a reason to wait.</p>
@@ -71,11 +69,11 @@
 
     <p><em>“Use difficulty as a guide not just in selecting the overall aim of your company, but also at decision points along the way.</em></p>
 
-    <p><em>What this meant in practice was that we deliberately sought hard problems. If there were two features we could add to our software, both equally valuable in proportion to their difficulty, we'd always take the harder one. Not just because it was more valuable, but because it was harder. We delighted in forcing bigger, slower competitors to follow us over difficult ground. I can remember times when we were just exhausted after wrestling all day with some horrible technical problem. And I'd be delighted, because something that was hard for us would be impossible for our competitors.</em></p>
+    <p>What this meant in practice was that we deliberately sought hard problems. If there were two features we could add to our software, both equally valuable in proportion to their difficulty, we'd always take the harder one. Not just because it was more valuable, but because it was harder. We delighted in forcing bigger, slower competitors to follow us over difficult ground. I can remember times when we were just exhausted after wrestling all day with some horrible technical problem. And I'd be delighted, because something that was hard for us would be impossible for our competitors.</p>
 
-    <p><em>This is not just a good way to run a startup. It's what a startup is. Venture capitalists know about this and have a phrase for it: barriers to entry. If you go to a VC with a new idea and ask him to invest in it, one of the first things he'll ask is, how hard would this be for someone else to develop? That is, how much difficult ground have you put between yourself and potential pursuers? And you had better have a convincing explanation of why your technology would be hard to duplicate.</em></p>
+    <p>This is not just a good way to run a startup. It's what a startup is. Venture capitalists know about this and have a phrase for it: barriers to entry. If you go to a VC with a new idea and ask him to invest in it, one of the first things he'll ask is, how hard would this be for someone else to develop? That is, how much difficult ground have you put between yourself and potential pursuers? And you had better have a convincing explanation of why your technology would be hard to duplicate.</p>
 
-    <p><em>Otherwise as soon as some big company becomes aware of it, they'll make their own, and with their brand name, capital, and distribution clout, they'll take away your market overnight.“</em></p>
+    <p>Otherwise as soon as some big company becomes aware of it, they'll make their own, and with their brand name, capital, and distribution clout, they'll take away your market overnight.“</p>
 
   </div>
 </details>
