--- a/books.html
+++ b/books.html
@@ -74,6 +74,37 @@ Beautifully simple yet full of layers, it made me reflect on what truly matters.
     </div>
 
 
+    Got it 👍 — here’s your **ready-to-paste HTML code** in the exact format you use for your site, same styling as your book cards, no long dashes or extra breaks:
+
+```html
+<div class="book-card">
+  <img src="https://m.media-amazon.com/images/I/71B0Z4Q6ZVL.jpg" alt="The Book of Five Rings cover">
+  <div class="book-info">
+    <h3>The Book of Five Rings</h3>
+    <h4>Miyamoto Musashi</h4>
+
+    <p><i>Every battle is first won in the mind — Musashi’s wisdom begins where the sword ends. Extreme discipline makes you unrecognizable. That’s what Musashi proved through his life and teachings in The Book of Five Rings — a guide not just for warriors, but for anyone seeking mastery over themselves.</i></p> 
+
+    <p><b>1. Earth Ring – Brutal Self-Honesty</b>  See things as they are, not as you wish they were. Musashi says you must study both the sword and the pen, body and mind. Before improving, you must face your reality. Imagine someone who believes they work hard, but when they track their time honestly, they find hours lost to distraction. That moment of truth hurts, but it’s the foundation of growth. The Earth Ring teaches that discipline begins with clarity. <i>Lesson: Track everything, know your truth, and accept reality before trying to change it.</i></p>
+
+    <p><b>2. Water Ring – Flow with Reality</b>  Be like water, adapt, don’t break. Once you see your flaws, don’t attack them with impossible plans. If you can’t run five miles, start with one. If you can’t meditate twenty minutes, begin with two. Musashi used every kind of weapon in battle to learn flexibility. Likewise, discipline must bend to life, not shatter against it. <i>Lesson: Small consistent effort beats perfect intentions, flow around obstacles and keep moving.</i></p>
+
+    <p><b>3. Fire Ring – Turn Anger into Fuel</b>  Anger is energy, the question is where you aim it. Most people burn themselves with comparison and jealousy. Musashi turned his rage into training. Instead of hating failure, use it to sharpen focus. When you’re frustrated with your weakness, channel that fire into the next action, not self-criticism. <i>Lesson: Don’t fight your emotions, direct them. Use anger as fuel to destroy laziness, not yourself.</i></p>
+
+    <p><b>4. Wind Ring – Stay Humble, Keep Learning</b>  When you think you’ve arrived, you start falling. Even undefeated, Musashi said, "I have not yet reached the Way." That humility kept him learning from every school and opponent he met. The danger of success is comfort, the belief that discipline can relax. The moment you stop observing yourself, you lose sharpness. <i>Lesson: Stay a student forever. Every level of mastery demands new awareness and new humility.</i></p>
+
+    <p><b>5. Void Ring – Become Discipline Itself</b>  There is no end. The way is the practice. Musashi taught that the void isn’t emptiness, it’s full acceptance. When you realize the struggle never ends, it stops feeling like struggle. Discipline becomes your nature, like breathing. You don’t do it to reach somewhere; you do it because that’s who you are. <i>Lesson: Stop chasing ease. The fight is the path, and the path itself is the reward.</i></p>
+
+    <p><i>The five rings together form a mirror, showing what it means to live awake, disciplined, and free. Earth shows truth, Water adapts, Fire fuels, Wind humbles, and Void completes. In mastering them, you don’t just learn how to win battles — you learn how to master yourself.</i></p>
+
+  </div>
+</div>
+```
+
+Would you like me to make a **matching short version** (3 paragraphs max) for mobile readers — same tone but quicker to read?
+
+
+
    <div class="book-card">
   <img src="https://m.media-amazon.com/images/I/81uWX5+A1rL.jpg" alt="Jonathan Livingston Seagull cover">
   <div class="book-info">
