--- a/books.html
+++ b/books.html
@@ -78,7 +78,7 @@ Beautifully simple yet full of layers, it made me reflect on what truly matters.
 
 ```html
 <div class="book-card">
-  <img src="https://m.media-amazon.com/images/I/71B0Z4Q6ZVL.jpg" alt="The Book of Five Rings cover">
+  <img src="https://m.media-amazon.com/images/I/81G-H+DLRvL._SL1500_.jpg" alt="The Book of Five Rings cover">
   <div class="book-info">
     <h3>The Book of Five Rings</h3>
     <h4>Miyamoto Musashi</h4>
