Edit book description for brevity
Removed a sentence from the description of 'The Book of Five Rings'.

--- a/books.html
+++ b/books.html
@@ -80,7 +80,7 @@ Beautifully simple yet full of layers, it made me reflect on what truly matters.
     <h3>The Book of Five Rings</h3>
     <h4>Miyamoto Musashi</h4>
 
-    <p><i>Every battle is first won in the mind — Musashi’s wisdom begins where the sword ends. Extreme discipline makes you unrecognizable. That’s what Musashi proved through his life and teachings in The Book of Five Rings — a guide not just for warriors, but for anyone seeking mastery over themselves.</i></p> 
+    <p><i>Every battle is first won in the mind — Musashi’s wisdom begins where the sword ends. Extreme discipline makes you unrecognizable.</i></p> 
 
     <p><b>1. Earth Ring – Brutal Self-Honesty</b>  See things as they are, not as you wish they were. Track everything, know your truth, and accept reality before trying to change it.</p>
 
