--- a/books.html
+++ b/books.html
@@ -109,6 +109,17 @@ Reading it felt like a mirror, asking me where in my own life I’ve settled for
  </div>
 </div>
 
+    <div class="book-card">
+  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fchampaca.in%2Fproducts%2Fanimal-farm-3&psig=AOvVaw0q8M5LuM8F2hvnNwsFXTlb&ust=1762957511063000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLDT5tem6pADFQAAAAAdAAAAABAc" alt="Animal Farm cover">
+  <div class="book-info">
+    <h3>Animal Farm</h3>
+    <h4>George Orwell</h4>
+    <p><i>Every revolution begins with purity and ends with politics. Every ideal turns to control the moment it becomes organized. Animal Farm is the story not of animals or governments, but of us.</i></p> 
+    <p>The animals start with a dream: equality, dignity, and freedom from exploitation. They overthrow their master believing they are creating justice. But slowly, the same forces they fought against  greed, control, fear reappear in new forms. The pigs who once spoke of unity become rulers, rewriting laws and reshaping truth.</p> 
+    <p>The commandments shift quietly  “All animals are equal” becomes “All animals are equal, but some are more equal than others.” There’s Boxer, the worker who believes effort alone will fix everything  like people who keep grinding, hoping the system will someday reward them. Then the sheep, who repeat what they hear without ever asking why  the crowd that follows noise over truth. And in the end, the pigs stand with the humans they once condemned, both drunk on the same power they promised to destroy.</p> 
+    <p><i>It’s a mirror for our world, how idealism without awareness turns into control, how obedience replaces thought, and how those who stop questioning slowly become what they once opposed.</i></p> 
+  </div>
+</div>
 
     
     <div class="book-card">
