Update book cover image for Animal Farm

--- a/books.html
+++ b/books.html
@@ -110,7 +110,7 @@ Reading it felt like a mirror, asking me where in my own life I’ve settled for
 </div>
 
     <div class="book-card">
-  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fchampaca.in%2Fproducts%2Fanimal-farm-3&psig=AOvVaw0q8M5LuM8F2hvnNwsFXTlb&ust=1762957511063000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLDT5tem6pADFQAAAAAdAAAAABAc" alt="Animal Farm cover">
+  <img src="https://champaca.in/cdn/shop/files/716bWXH83CL._SL1500_1024x1024@2x.jpg?v=1719910537" alt="Animal Farm cover">
   <div class="book-info">
     <h3>Animal Farm</h3>
     <h4>George Orwell</h4>
