--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Aditya Kumar - The Simple Guy</title>
-  <meta name="description" content="Aditya Kumar - IIT Bombay graduate working in Founder's Office at Teachmint. Exploring startups, learning, and growing 1% better every day." />
+  <title>Aditya - The Simple Guy</title>
+  <meta name="description" content="Aditya - IIT Bombay graduate working in Founder's Office at Teachmint. Exploring startups, learning, and growing 1% better every day." />
   <meta name="google-site-verification" content="0NHZXSmJXrJ_qAptEL68zXfPZNz2XLeAXk8xwwKQzpY" />
 
   <!-- Favicons -->
@@ -36,7 +36,7 @@
       
       <p>
         Hello World! 👋<br><br>
-        I am <strong>Aditya Kumar</strong> (also known as <a href="https://www.linkedin.com/in/adityakumar2608/" target="_blank" rel="noopener">Vikram Aditya</a> and 王阳明 - Wang Yangming). 
+        I am <strong>Vikram Aditya</strong> (also known as <a href="https://www.linkedin.com/in/adityakumar2608/" target="_blank" rel="noopener">Aditya Kumar</a> and 王阳明 - Wang Yangming). 
         I'm a Civil Engineering graduate from <strong>IIT Bombay</strong> (Class of 2024), currently working in the <strong>Founder's Office at Teachmint</strong> in Bengaluru.
       </p>
 
