Revise footer text and add new line
Updated footer content with new text and formatting.

--- a/index.html
+++ b/index.html
@@ -230,7 +230,10 @@
   </main>
 
   <footer>
-    <p>© 2024-2025 Vikram Aditya. Building and learning, one day at a time.</p>
+    <footer>
+  <p>© 2024–2025 Vikram Aditya</p>
+  <p>Made with ❤️</p> 
+</footer>
   </footer>
 
   <!-- Back to Top Button -->
