--- a/index.html
+++ b/index.html
@@ -231,8 +231,7 @@
 
   <footer>
     <footer>
-  <p>© 2024–2025 Vikram Aditya</p>
-  <p>Made with ❤️</p> 
+   <p>© 2024-2025 Vikram Aditya. Building and learning, one day at a time.</p>
 </footer>
   </footer>
 
