--- a/finance.html
+++ b/finance.html
@@ -289,7 +289,7 @@
   </main>
 
   <footer>
-    <p>© 2024-2025 Vikram Aditya. Building and learning, one day at a time.</p>
+    <p>© 2025 Vikram Aditya — Made with ❤️ </p>
   </footer>
 
   <button class="back-to-top" aria-label="Back to top">
