Update footer text and year in blog.html

--- a/blog.html
+++ b/blog.html
@@ -350,7 +350,7 @@ We’re not just electing worse leaders, we’re creating the conditions for the
   </main>
 
   <footer>
-    <p>© 2024-2025 Vikram Aditya. Building and learning, one day at a time.</p>
+    <p>© 2025 Vikram Aditya — Made with ❤️ </p>
   </footer>
 
   <button class="back-to-top" aria-label="Back to top">
