Add 'The Alchemist' book card to books.html
Added a new book card for 'The Alchemist' by Paulo Coelho with an image and description.

--- a/books.html
+++ b/books.html
@@ -54,6 +54,17 @@
       </article>
 
       <article class="book-card fade-in">
+        <img src="https://static.wixstatic.com/media/8cc233_da3154cf2cdd4e979a841903fb3cf770~mv2.jpg/v1/fill/w_1585,h_2400,al_c,q_90/The%20Alchemist%20cover.jpg" loading="lazy">
+        <div class="book-info">
+          <h3>The Alchemist</h3>
+          <h4>Paulo Coelho</h4>
+          <p><i>When you want something, the universe aligns to help you.</i></p>
+          <p>Santiago’s journey is the journey of every human being who dares to listen to the whisper of his own heart. People live surrounded by noise, ambition, and fear, so they forget their inner call. Paulo Coelho reminds them that existence speaks in omens, and only the courageous can understand its language. The desert in this story is the desert inside you, where the ego dissolves and trust becomes your only companion. The Alchemist who appears is nothing but your own forgotten master within. And the treasure found at the end is the simple truth that what you seek is already inside you</p>
+          <p><i>The book is beautiful because it seduces the reader into seeking, and that seeking is the beginning of transformation.</i></p>
+        </div>
+      </article>
+
+      <article class="book-card fade-in">
         <img src="https://m.media-amazon.com/images/I/81G-H+DLRvL._SL1500_.jpg" alt="The Book of Five Rings cover" loading="lazy">
         <div class="book-info">
           <h3>The Book of Five Rings</h3>
